Settings verbessert, History neu gebaut und Session hinzugefügt